reorganisation des fichiers

--- a/Codes/code_ARS_Julie.ipynb
+++ b/Codes/code_ARS_Julie.ipynb
@@ -5,7 +5,7 @@
    "id": "3c4656f7-ce7f-4a54-9048-abf2e676e2e6",
    "metadata": {},
    "source": [
-    "# Les alliances entre entreprises de la tech : structuration, cluster et dépendance"
+    "# Les alliances entre entreprises de la tech : structure, cluster et dépendance"
    ]
   },
   {
